apps/mern-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mern-app
  labels:
    app: mern-app
    environment: dev
